--- a/src/main/resources/static/css/postPage/postCss.css
+++ b/src/main/resources/static/css/postPage/postCss.css
@@ -15,6 +15,16 @@
     height: 35px;
 }
 
+.board-buttons{
+    background-color: rgba(164, 120, 100, 0.5);
+    border-style: none;
+    border-radius: 10px;
+    color: white;
+    height: 35px;
+    cursor: pointer;
+}
+
+
 #notice-board{
     width: 90px;
 }
@@ -108,6 +118,7 @@
     border-style: none;
     border-radius: 10px;
     color: rgba(0, 0, 0, 0.7);
+    cursor: pointer;
 }
 
 #editButtons{
