--- a/src/main/resources/templates/views/board/noticeBoardListPage.html
+++ b/src/main/resources/templates/views/board/noticeBoardListPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/boardpage/boardPageCss.css" rel="stylesheet" type="text/css"/>
-    <script th:src="@{/js/board/boardList.js}" type="text/javascript"></script>
+    <script src="/js/board/boardList.js"></script>
     <title>공지사항 게시판</title>
 </head>
 <body>
@@ -35,6 +35,10 @@
             <td>[[${p.postViews}]]</td>
         </tr>
     </table>
+    
+    <div id="writePost" th:if="${session.loginUser != null && session.loginUser.admin == 'Y'}">
+    	<button id="writeButton">글쓰기</button>
+    </div>
     
     <div id=paginButton align="center">
     	<th:block th:if="${pi.currentPage > 1}">
