배너 css 및 상단 버튼 js 변경

--- a/bin/main/templates/views/board/noticeBoardListPage.html
+++ b/bin/main/templates/views/board/noticeBoardListPage.html
@@ -31,7 +31,7 @@
             <td>[[${p.postNo}]]</td>
             <td>[[${p.postDate}]]</td>
             <td class="tdPostTitle">[[${p.postTitle}]]</td>
-            <td class="tdUserId">[[${p.userNickname}]]</td>
+            <td>[[${p.userNickname}]]</td>
             <td>[[${p.postViews}]]</td>
         </tr>
     </table>
