--- a/src/main/resources/templates/views/users/enroll.html
+++ b/src/main/resources/templates/views/users/enroll.html
@@ -48,18 +48,18 @@
 			</div>
 
 			<!-- 이메일 -->
-<!-- 			<div class="signup"> -->
-<!-- 				<input type="email" id="email" name="userEmail" placeholder="이메일"> -->
+			<div class="signup">
+				<input type="email" id="email" name="userEmail" placeholder="이메일">
 
-				<!-- 이메일 인증 버튼
+				<!-- 이메일 인증 버튼 -->
 				<input type="button" id="send_email" name="send_email" value="인증번호 전송">
 			</div>
 
-			이메일 인증 확인
+			<!-- 이메일 인증 확인 -->
 			<div class="signup">
 				<input type="text" id="email_verify" name="email_verify" placeholder="인증번호">
 				<input type="button" id="email_verify_btn" name="email_verify_btn" value="확인">
-			</div> -->
+			</div>
 
 			<br />
 
