--- a/src/main/resources/templates/chatting/chat.html
+++ b/src/main/resources/templates/chatting/chat.html
@@ -8,14 +8,14 @@
 -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/chatting/chatting.css">
 <script src="/js/chatting/chatting.js" type="module"></script>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
     <div id="cMain">
@@ -56,75 +56,5 @@
             </table>
         </div>
     </div>
-<script th:inline="javascript">
-$(document).ready(function(){
-
-    const username = "userName";
-
-    $("#disconn").on("click", (e) => {
-        disconnect();
-    })
-
-    $("#sendButton").on("click", (e) => {
-        send();
-    });
-
-    const websocket = new WebSocket("ws://localhost:8080/ws/chat");
-
-    websocket.onmessage = onMessage;
-    /* websocket.onopen = onOpen;
-    websocket.onclose = onClose; */
-
-    function send(){
-
-        let msg = document.getElementById("message");
-        websocket.send(username + ":" + msg.value);
-        msg.value = '';
-    }
-/* 
-    //채팅창에서 나갔을 때
-    function onClose(evt) {
-        var str = username + ": 님이 방을 나가셨습니다.";
-        websocket.send(str);
-    }
-
-    //채팅창에 들어왔을 때
-    function onOpen(evt) {
-        var str = username + ": 님이 	입장하셨습니다.";
-        websocket.send(str);
-    } */
-
-    function onMessage(msg) {
-        var data = msg.data;
-        var sessionId = null;
-        //데이터를 보낸 사람
-        var message = null;
-        var arr = data.split(":");
-
-        var cur_session = username;
-
-        //현재 세션에 로그인 한 사람
-        sessionId = arr[0];
-        message = arr[1];
-
-
-            //로그인 한 클라이언트와 타 클라이언트를 분류하기 위함
-            if(sessionId == cur_session){
-                var str = "<div class='rChat chatting'>";
-                str += "<div class='dsib name'>"+sessionId+"</div>";
-                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-                str += "</div>";
-                $("#chat").append(str);
-            }
-            else{
-            	var str = "<div class='lChat chatting'>";
-                str += "<div class='dsib name'>"+sessionId+"</div>";
-                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-                str += "</div>";
-                $("#chat").append(str);
-            }
-        }
-    })
-</script>
 </body>
 </html>
