--- a/src/main/resources/templates/views/chatting/chat.html
+++ b/src/main/resources/templates/views/chatting/chat.html
@@ -10,7 +10,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/css/chatting/chatting.css">
+<link rel="stylesheet" href="/css/chatting/chatting.css?after">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,35 +43,16 @@
 					data : {
 							cId : userId , 
 							cContent : msg.value , 
-							cNickName : username,
-		        			cDate : null
+							cNickName : username
 						},
-					success : data = () =>{
-						for(const list of data){
-							console.log(list);
-							if(sessionId == cur_session){
-					                var str = "<div class='rChat chatting'>";
-					                str += "<div class='dsib name'>"+sessionId+"</div>";
-					                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-					                str += "</div>";
-					                $("#chat").append(str);
-					            }
-					            else{
-					            	var str = "<div class='lChat chatting'>";
-					                str += "<div class='dsib name'>"+sessionId+"</div>";
-					                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-					                str += "</div>";
-					                $("#chat").append(str);
-					            }
-						}
-						
+					success : data =>{
+				        websocket.send(username + ":" + msg.value);
+				        msg.value = '';
 					}	,
 					error : function() {
 						
 					}
 				});
-		        websocket.send(username + ":" + msg.value);
-		        msg.value = '';
 		    }
 
 		    //채팅창에서 나갔을 때
@@ -83,25 +64,40 @@
 		    function onOpen(evt) {
 		        $.ajax({
 					url : "/redis/get",
-					success : data = () =>{
-						for(const list of data){
-							console.log(list);
-							if(sessionId == cur_session){
-					                var str = "<div class='rChat chatting'>";
-					                str += "<div class='dsib name'>"+sessionId+"</div>";
-					                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-					                str += "</div>";
-					                $("#chat").append(str);
-					            }
-					            else{
-					            	var str = "<div class='lChat chatting'>";
-					                str += "<div class='dsib name'>"+sessionId+"</div>";
-					                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
-					                str += "</div>";
-					                $("#chat").append(str);
-					            }
+					data : {user : "AllChatting"},
+					success : data =>{
+								var cDate = [];
+								var cnt = 0;
+						for(let i = 0 ; i < data.length ; i++){
+							var cData = [];
+							for(let j =  0 ; j < data[i].length ; j ++){
+								var mod = j%4;
+								
+								cDate[mod] = data[i][j];
+								if(mod == 3){
+									cData[cnt] += cDate;
+									cnt++;
+									var str = "";
+									if((cDate[1] == username)){
+										str += "<div class='rChat chatting'>";
+						                str += "<div class='dsib name'>"+cDate[1]+"</div>";
+						                str += "<div class='dsib content'>"+cDate[2]+"</div>&emsp;<br>";
+						                str += "<p class='rdate'>"+cDate[3]+"</p>";
+						                str += "</div>";
+						                $("#chat").append(str);
+									}
+									else{
+										str += "<div class='lChat chatting'>";
+										str += "<div class='dsib name'>"+cDate[1]+"</div>";
+						                str += "<br>&emsp;<div class='dsib content'>"+cDate[2]+"</div>";
+						                str += "<p class='ldate'>"+cDate[3]+"</p>";
+						                str += "</div>";
+						                $("#chat").append(str);
+									}	
+								}
+							}
+							
 						}
-						
 					}	,
 					error : function() {
 						
@@ -115,7 +111,7 @@
 		        //데이터를 보낸 사람
 		        var message = null;
 		        var arr = data.split(":");
-
+				console.log(data);
 		        var cur_session = username;
 
 		        //현재 세션에 로그인 한 사람
@@ -127,7 +123,8 @@
 		            if(sessionId == cur_session){
 		                var str = "<div class='rChat chatting'>";
 		                str += "<div class='dsib name'>"+sessionId+"</div>";
-		                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
+		                str += "<div class='dsib content'>"+message+"</div>&emsp;<br>";
+		                str += "<p class='rdate'>"+cDate[3]+"</p>";
 		                str += "</div>";
 		                $("#chat").append(str);
 		            }
@@ -135,6 +132,7 @@
 		            	var str = "<div class='lChat chatting'>";
 		                str += "<div class='dsib name'>"+sessionId+"</div>";
 		                str += "<br>&emsp;<div class='dsib content'>"+message+"</div>";
+		                str += "<p class='ldate'>"+cDate[3]+"</p>";
 		                str += "</div>";
 		                $("#chat").append(str);
 		            }
@@ -168,6 +166,5 @@
             </table>
         </div>
     </div>
-		<button id="chattingSH">aaaaaaaaaa</button>
 </body>
 </html>
