--- a/bin/main/static/css/mainPage/mainPageCss.css
+++ b/bin/main/static/css/mainPage/mainPageCss.css
@@ -95,6 +95,10 @@
 }
 
 /*채팅 */
-#chattingModal{
-	display:inline-block;
+.chatDiv{
+	display: inline-block;
+	    position: absolute;
+	    right: 40px;
+	    top: 450px;
+	
 }
