--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -36,7 +36,7 @@
 		
 	    	<div id="chattingModal" th:insert="~{/views/chatting/chat}">
 	    	</div>
-	    	<button id="SHBtn"> 채팅</button>
+	    	<img id="SHBtn" src="/image/chattingIcon.png"></img>
 		</div>
 </body>
 </html>
