--- a/bin/main/static/css/chatting/chatting.css
+++ b/bin/main/static/css/chatting/chatting.css
@@ -14,9 +14,6 @@
     overflow-y: scroll;
 }
 
-.rChat{
-    text-align: right;
-}
 
 .dsib{
     display: inline-block;
@@ -34,18 +31,16 @@
     margin: 0px 3px;
 }
 
-.rChat .date{
-    margin-left: 3px;
+.rChat{
+	text-align: right;
+    margin-right: 3px;
     /* margin-top: 15px; */
-    font-size: 10px;
-    color:gray;
     /* float: left; */
 } 
-.lChat .date{
+.lChat{
+	text-align: left;
     margin-left: 3px;
     /* margin-top: 15px; */
-    font-size: 10px;
-    color:gray;
     /* float: right; */
 } 
 
