--- a/src/main/resources/static/css/mainPage/mainPageCss.css
+++ b/src/main/resources/static/css/mainPage/mainPageCss.css
@@ -99,6 +99,12 @@
 	display: inline-block;
 	    position: absolute;
 	    right: 40px;
-	    top: 450px;
-	
+	    top: 430px;
+		text-align: right;
+}
+
+#SHBtn{
+	width: 50px;
+	height: 50px;
+	margin-top: 5px;
 }
